debugger-2/frontend/src/MainContent/MainContent.css
.main-content {
    padding: 14px 24px 0px 24px;
    width: calc(100% - var(--sidebarWidth));
    max-width: calc(100% - var(--sidebarWidth) - 24px - 24px);
    margin-top: 36px;
    margin-left: var(--sidebarWidth);
    height: calc(100vh - 62px);
}

div.card {
    width: 100%;
    border: 1px solid black;
    border-radius: 6px;
    margin-bottom: 4px;
    margin-top: 4px;
}

.full-width {
    width: 100%;
}

div.card.details {
    height: 200px;
}

div.card.query {
    width: 100%;
    margin: 5px 5px 5px 5px;
    overflow-y: auto;
    overflow-x: scroll;
    padding: 5px 5px 5px 5px;
}

div.card.query-details {
    width: 40%;
    margin: 5px 5px 5px 0;
    overflow-y: auto;
    padding: 5px 5px 5px 5px;
}

div.request-list-row {
    color: black;
    background-color: var(--white);
    cursor: pointer;
    padding-left: 8px;
}

div.request-list-row:not(:first-child) {
    border-top: 1px solid var(--black);
}

div.request-list-row[data-selected="true"] {
    background-color: var(--lightBlue);
}

div.request-list-row[data-has-error="true"] {
    color: white;
    background-color: var(--red);
}

div.request-list-row[data-is-odd="true"] {
    color: white;
    background-color: var(--yellow, pink);
}

div.request-list-row:last-child {
    border-bottom: 1px solid black;
}

div[data-haschildren="true"] {
    border-bottom: solid var(--black) 1px;
}

.leaf {
    width: auto;
    cursor: pointer;
}

.breadcrumb::after {
    content: '/';
    padding-left: 8px;
    padding-right: 8px;
}

.left-border-black {
    border-left: solid 1px var(--black);
}

